// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`WordSearchStats should render found words and time spent after game was started and stopped 1`] = `
<DocumentFragment>
  <div
    data-overlay-container="true"
  >
    <button
      data-testid="test-on-word-found"
      type="button"
    >
      Find word
    </button>
    <button
      data-testid="test-start"
      type="button"
    >
      Start
    </button>
    <button
      data-testid="test-stop"
      type="button"
    >
      Stop
    </button>
    <div
      class="flex flex-col"
      data-testid="testid-wordsearch-stats"
    >
      <div
        class="flex flex-row justify-stretch gap-1"
      >
        <p
          class="body-2 flex-1 text-right"
        >
          <strong>
            Found words:
          </strong>
        </p>
        <p
          class="body-2 flex-1 text-center"
        >
          5
        </p>
      </div>
      <div
        class="flex flex-row justify-stretch gap-1"
      >
        <p
          class="body-2 flex-1 text-right"
        >
           
          <strong>
            Time spent:
          </strong>
        </p>
        <p
          class="body-2 flex-1 text-center"
        >
          00 m. 00 s.
        </p>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`WordSearchStats should render only found words if game has not been started or stopped yet 1`] = `
<DocumentFragment>
  <div
    data-overlay-container="true"
  >
    <button
      data-testid="test-on-word-found"
      type="button"
    >
      Find word
    </button>
    <button
      data-testid="test-start"
      type="button"
    >
      Start
    </button>
    <button
      data-testid="test-stop"
      type="button"
    >
      Stop
    </button>
    <div
      class="flex flex-col"
      data-testid="testid-wordsearch-stats"
    >
      <div
        class="flex flex-row justify-stretch gap-1"
      >
        <p
          class="body-2 flex-1 text-right"
        >
          <strong>
            Found words:
          </strong>
        </p>
        <p
          class="body-2 flex-1 text-center"
        >
          5
        </p>
      </div>
    </div>
  </div>
</DocumentFragment>
`;
